--- a/style.css
+++ b/style.css
@@ -118,3 +118,24 @@ body{
     padding: 20px;
     width: 65%;
 }
+
+@media screen and (max-width:700px)  {
+.encabezado{
+    justify-content: center;
+}
+.main-container{
+    flex-direction: column;
+    align-items: center;
+}
+.charizard-container{
+    width: 90%;
+    z-index: 2;
+}
+.info-pokemon{
+        width: 85%;
+        height: 60vh;
+        transform: translateY(-100px);
+
+    }
+
+}
